# Quantum-Cosmology-Integration-Suite-QCIS-

./: 1. Hubble Tension Resolution.py  1.1 Quantum-Corrected Mukhanov-Sasaki Equation Implementation.py  1.1 Quantum-Corrected Perturbation Equations.py  1.2 Full Boltzmann Integration.py  1.2 Tensor Perturbations with Quantum Sources.py  1.3 Power Spectrum Calculations.py  2. Quantum Gravity Constraints.py  2.1 CLASS Interface Wrapper.py  2.1 Numerical Relativity with Quantum Sources.py  2.2 Causal Wedge Reconstruction.py  2.2 Quantum-Corrected CLASS Extension.py  3. Early Universe Physics.py  3.1 Planck Data Interface.py  3.2 Complete Validation Pipeline.py  Adiabatic regularization.py  Benchmark Suite.py  ConvergenceMonitor.py  Core Solver.sh  Efficient Coupling Layer.py  EfficientQCISBridge.py  Entanglement-Entropy-Calculator.py  Exponential Complexity  Integrate with CLASS.py  Master Pipeline Class.py  Memory Requirements  Metric Backreaction.py  PerturbationSolver.py  PhysicsValidator.py  Planck Validation.sh  Production-Ready Implementation.py  ProperQFTSimulator.py  QuantumFieldTheorySimulator.py  QuantumStressEnergySolver.py  README.MD  Simplistic Stress-Energy Tensor.py  Test Suite.py  Unify Repositories.sh  Validation Suite.py  adaptive sampling.py  analytic approximations.py  (+15 more)
